# hsrgbalign

./: CMakeLists.txt  README.txt  multiSalign_sphericalHomog_hyperspectral2gray.cpp  multiSresidue_sphericalHomog_hyperspectral2gray.h
RANSAC/: sphericalRansac.hpp
